✨ Experiments API endpoint
